public/css/rr-style.css
/* ... */
.private {
    color: #7c2c2c;
}

.private .league-btn {
    background: #7c2c2c;
}

#main .promo-content .price {
    font-size: 2em;
    text-align: right;
    font-weight: 600;
    font-family: 'Oswald', sans-serif;
    color: #7c2c2c;
}


.highlight {
    color: #BF1C29;
}

.event-container .countdown {
    font-size: 1.5em;
    font-weight: 600;
    color: #5d1d1e;
}

.league-item .btn:hover {
    /*background: #1a1a1a;
    border-color: #7c2c2c;*/
    background: #277042;
    color: #fff;
}

/*.game-info-graph > div strong:hover {
    color: #7c2c2c;
}*/

#submit.submit-btn {
    background: #5d2121 ;
    width: 86%;
    text-transform: uppercase;
    border-radius: 2px;
    padding: 1em;
    font-family: 'Open Sans', sans-serif;
}

#submit.submit-btn:hover {
    background: #7c2c2c;
}


.defbutton .pricetag {
    background: #5d1d1e;
}

.content-padding h3 {
    color: #8f4f4f;
    border-bottom: 1px solid #6e2e2f;

}

.content-padding h4 {
    color: #6e2e2f;
    border-bottom: 1px solid #6e2e2f;
}

ul li {
    color: #fff;
}

.white-popup strong {
    color: #5d1d1e !important;
}
/*------------- 
  Green
-------------*/

/* Social Share Green */
.socialize .s-sh {
    background: #2d6e44;
}

.league-btn {
    background: #00a14b;
    width: 59%;
    padding: 5% 12% !important;
    border-radius: .3em !important;
    text-align: center;
    text-transform: uppercase;
    color: #fff;
    font-size: .9em;
}

.league-btn:hover, .public .league-btn:hover {
    background: #277042;
    color: #fff;
}

.public {
    color: #00a14b;
}

.public .league-btn {
    background: #00a14b;
}

.league-item .btn {
    /*border: 2px solid #FF4D49;*/
    width: 90%;
    color: #fff;
    text-align: center;
    background: #00a14b;
    padding: .5em;
    font-size: .9em;
    clear: both;
    display: block;
    border-radius: .3em;
}

.game-info-buttons .defbutton.green {
    background:#00a14b ;
}
.game-info-buttons .defbutton.green:hover {
    background: #277042;
}

table.feature-table tbody td.bid--placed {
    color: #00A14B;
}

.bid-btn {
    background: #00a14b;
    border: none;
    width: 25%;
    padding: .8em;
    color: #fff;
    text-transform: uppercase;
    margin-top: 1em;
    border-radius: .3em;
}

.white-popup p:first-of-type{
    padding: 1.5em 0;
}

.white-popup p:last-of-type {
    padding: .2em 0 1.5em 0;
}

/*------------- 
  Grey
-------------*/

#sidebar .panel > h2 span, #main h2 span, #main h3 span {
  background: #1a1a1a;
  padding: .5em;
}

#main-box{
    background: #110f10;
}

#sidebar .panel .panel-content, #main-box #sidebar, #main-box.full-width #main, #main-box #main {
  background: #1A1A1A;
}

.league-container {
    background: #222;
    overflow: hidden;
    padding: 1em;
}
.league-left, .league-right, .league-left-inner, .league-right-inner  {
    margin: 0 auto;
    background: #222;
}

.event-container:nth-child(odd) {
    background-color: #222222 ;
}

.event-container:nth-child(even){
    background-color: #1a1a1a;
}

/* Light Grey */
#main p, .contact-address, label {
    color: #9c9c9c;
    font-size: 0.9em;
    line-height: 2em !important;
}

.caption span, h4, .dropspot, h6 {
     color: #9c9c9c;
}

.league-left-inner  {
    width: 49%;
    border-right: 1px solid #9c9c9c;
}

.league-table, .league-btn-container {
    width: 90%;
    margin: 0 auto;
    border-top: 2px solid #9c9c9c;
    border-bottom: 2px solid #9c9c9c;
    padding: 1em 0;
    overflow: visible;
}

.league-left-inner .table-row {
    border-bottom: 1px dotted #9c9c9c;
}

.table-row {
    clear: both;
    border-bottom: 1px dotted #9c9c9c;
    overflow: hidden;
}

.event-container p {
    color: #9c9c9c;
    font-weight: 200;
}

.panel p {
    color: #9c9c9c;
}

.title {
    color: #9c9c9c;
    font-weight: 600;
}

.panel h3 {
   /*color: #353535 ; */
   color: #575757 ; 
}

.panel strong, .panel dd, .panel-content h5 {
    color: #929497;
}



/* Tables */

.feature-table, table.feature-table thead tr th {
    border: 0 !important;
}

table.feature-table.dark-gray thead tr th {
    background: #110f10;
    color: #fff;
    text-transform: uppercase;
    border: 0;
}

.feature-table tbody tr:nth-child(odd) {
    background: #222222;
}
.feature-table tbody tr:nth-child(even) {
    background: #110f10;
}
table.feature-table tbody td {
    border-color: #000;
    border-bottom: 0 !important;
    color: #fff;
    text-transform: capitalize;
}

.form--item input[type="file"]::-webkit-file-upload-button,.form--item button, .the-form input[type="file"]::-webkit-file-upload-button, .the-form button  {
   background: #222222;
    color: #fff;
    font-weight: 600;
    text-transform: uppercase;
    text-align: center;
    padding: 1em .5em;
    width: 60%;
    border: 1px solid #222;
}

#main .the-form form > p {
    font-size: .7em;
}


#main .the-form form > p > label {
    font-size: 1em;
}

.game-info-buttons .defbutton {
    background: #4B4B4B;
    color: #fff;
}
.game-info-buttons .defbutton:hover {
    background: #353535;
}

.white-popup h3, .white-popup label {
    color: #353535;
}

.white-popup input {
    padding: .6em;
    margin-right: 2em;
}

.white-popup label  {
    vertical-align: middle;
}

/*------------- 
  Blue
-------------*/
.main-menu ul li:hover > a span i.fa, .main-menu ul li:hover > a {
  color: #0598c4 !important;
}

.info-btn:hover {
    background: #2d456f;
    color: #fff;
}


/*------------- 
  White
-------------*/
a {
    color: #fff;
}

a:hover {
    color: #BF1C29 !important;
}
#main h2 .pagination-item.current {
    color: #fff !important;
    text-decoration: underline;
    font-size: 16px;
}

h5.title a {
    color: #fff;
}

#search {
    background: #FFF;
    border: none;
    max-height: 5px;
}

.owl-theme .owl-controls .owl-page.active span {
    background: #fff;
}
/* ... */

